--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,12 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
     }
 }
-
+repositories {
+    maven {
+        url "http://maven.aliyun.com/nexus/content/groups/public/"
+    }
+    mavenCentral()
+}
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
@@ -18,18 +23,11 @@ apply plugin: 'io.spring.dependency-management'
 apply from: 'gradle/checkstyle.gradle'
 apply from: 'gradle/dependency-report.gradle'
 apply from: 'gradle/findbugs.gradle'
+apply from: rootProject.file('gradle/install-git-hooks.gradle')
 
 group = 'com.test'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-
-repositories {
-    maven {
-        url "http://maven.aliyun.com/nexus/content/groups/public/"
-    }
-    mavenCentral()
-}
-
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
